Actions
Bug #12127
closedauditd: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
auditd.c: In function 'main': auditd.c:265:33: error: cast between incompatible function types from 'void (*)()' to 'void * (*)(void *)' [-Werror=cast-function-type] if (pthread_create(&tid, NULL, (void *(*)(void *))signal_thread, ^ doorway.c: In function 'auditd_thread_init': doorway.c:509:8: error: cast between incompatible function types from 'void (*)(plugin_t *)' {aka 'void (*)(struct plg *)'} to 'void * (*)(void *)' [-Werror=cast-function-type] (void *(*)(void *))process, p)) { ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit d6beba26494f4877120c99b5931876f56ba5dee5
commit d6beba26494f4877120c99b5931876f56ba5dee5 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T17:33:23.000Z 12127 auditd: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions